# medialibrary

./: .gitignore  BUILDING.md  CHANGELOG.md  DEV_RELEASE.md  LICENSE  README.md  TOOLS.md  pyproject.toml  setup.cfg
doc/: index.rst
doc/tools/media/: list.rst  validate.rst
doc/tools/movies/: compare.rst  list.rst  show.rst
src/media/: __init__.py
src/media/data/: dates.py  nouns.py
src/media/data/media/: internal.py
src/media/data/media/contents/: __init__.py  internal.py  unique.py
src/media/data/media/contents/audio/: __init__.py
src/media/data/media/contents/generic/: catalog.py  keywords.py
src/media/data/media/contents/genericv/: crew.py  story.py  technical.py  variants.py
src/media/data/media/contents/movie/: __init__.py  classification.py  internal.py  unique.py
src/media/data/media/medium/: __init__.py  device.py  internal.py  inventory.py  productid.py  productspecs.py  release.py
src/media/data/media/meta/: authorship.py
src/media/fileops/: filenames.py  loader.py  repo.py  scanner.py
src/media/fmt/formatter/: __init__.py  abstract.py  selector.py  stream.py
src/media/fmt/formatter/csv/: __init__.py  internal.py  stream.py  table.py
src/media/fmt/formatter/html/: __init__.py  basics.py  common.py  internal.py  stream.py  table.py
src/media/fmt/formatter/plaintext/: __init__.py  basics.py  internal.py  stream.py  table.py
src/media/fmt/structure/: basics.py  table.py
src/media/fmt/text/: basics.py  media.py  movie.py
src/media/fmt/text/audio/: __init__.py  album.py
src/media/general/: __init__.py  inspector.py  stringtools.py  titletools.py
src/media/general/sorting/: groups.py  index.py  organizer.py
src/media/general/sorting/content/: __init__.py
src/media/general/sorting/content/audio/: internal.py
src/media/generic/: language.py  stringtools.py  titletools.py
src/media/generic/compare/: __init__.py  movie.py
src/media/generic/sorting/: batch.py  groups.py  lists.py  organizer.py
src/media/generic/sorting/content/audio/: __init__.py
src/media/tools/: __init__.py  common.py  listmovies.py  showmovies.py
src/media/tools/audio/: __init__.py
src/media/tools/audio/albums/: __init__.py  list.py
src/media/tools/media/: __init__.py  authorrecords.py  list.py  show.py  validate.py
src/media/tools/meta/: __init__.py  authorship.py
src/media/tools/movies/: __init__.py  castlist.py  common.py  compare.py  debuglist.py  genrebreakdown.py  keywordlist.py  list.py  namelist.py  show.py  timebuckets.py  validate.py
src/media/validation/core/: faults.py  results.py  status.py  tests.py  validator.py
src/media/validation/suites/: default.py
src/media/validation/tests/media/: internal.py
src/media/xml/: functions.py  namespaces.py  parser.py
test/media/data/: test_dates.py  test_nouns.py
test/media/data/media/contents/: test_unique.py
test/media/data/media/medium/: test_productid.py  test_release.py
test/media/fmt/: __init__.py
test/media/fmt/formatter/csv/: test_stream.py
test/media/fmt/formatter/html/: test_stream.py
test/media/fmt/formatter/plaintext/: test_stream.py
test/media/general/: test_stringtools.py  test_titletools.py
test/media/validation/core/: test_test_result.py
(+43 files in other folders)
