[project]
name = "medialibrary"
description = "Package for reading vtmedia XML files describing a movie/music media library"
readme = "README.md"
requires-python = ">3.8"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["xml", "movies", "dvds", "music", "cds", "albums"]
authors = [
  {email = "cjcodeproj@fastmail.com", name = "Chris J"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: Text Processing :: Markup :: XML",
  "Topic :: Multimedia",
  "Topic :: Multimedia :: Sound/Audio",
  "Topic :: Multimedia :: Video"
]
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/cjcodeproj/medialibrary"
"bug tracker" = "https://github.com/cjcodeproj/medialibrary/issues"
repository = "https://github.com/cjcodeproj/medialibrary"
changelog = "https://github.com/cjcodeproj/medialibrary/blob/main/CHANGELOG.md"

[tool.setuptools.dynamic]
version = {attr = "media.__version__"}

[build-system]
requires = [
	"setuptools",
	"wheel"
]
build-backend = "setuptools.build_meta"

[tools.pylint.messages_control]
disable = ["R0801"]
