[metadata]
name = medialibrary
version = 0.1
author = Chris J
author_email = cj
description = Library for vtmedia XML files
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent
